WebCore/platform/graphics/Pattern.h
@@ -74,9 +74,16 @@ namespace WebCore {
 
         Image* tileImage() const { return m_tileImage.get(); }
 
+        void platformDestroy();
+
         // Pattern space is an abstract space that maps to the default user space by the transformation 'userSpaceTransformation' 
+#if PLATFORM(SKIA)
+        PlatformPatternPtr platformPattern(const TransformationMatrix& userSpaceTransformation);
+#else
         PlatformPatternPtr createPlatformPattern(const TransformationMatrix& userSpaceTransformation) const;
-        void setPatternSpaceTransform(const TransformationMatrix& patternSpaceTransformation) { m_patternSpaceTransformation = patternSpaceTransformation; }
+#endif
+        void setPatternSpaceTransform(const TransformationMatrix& patternSpaceTransformation);
+        void setPlatformPatternSpaceTransform();
 
     private:
         Pattern(Image*, bool repeatX, bool repeatY);
@@ -85,6 +92,7 @@ namespace WebCore {
         bool m_repeatX;
         bool m_repeatY;
         TransformationMatrix m_patternSpaceTransformation;
+        PlatformPatternPtr m_pattern;
     };
 
 } //namespace
