WebCore/platform/graphics/skia/PatternSkia.cpp
@@ -40,8 +40,17 @@
 
 namespace WebCore {
 
-PlatformPatternPtr Pattern::createPlatformPattern(const TransformationMatrix& patternTransform) const
+void Pattern::platformDestroy()
 {
+    m_pattern->safeUnref();
+    m_pattern = 0;
+}
+
+PlatformPatternPtr Pattern::platformPattern(const TransformationMatrix& patternTransform)
+{
+    if (m_pattern)
+        return m_pattern;
+
     // Note: patternTransform is ignored since it seems to be applied elsewhere
     // (when the pattern is used?). Applying it to the pattern (i.e.
     // shader->setLocalMatrix) results in a double transformation. This can be
@@ -53,31 +62,42 @@ PlatformPatternPtr Pattern::createPlatformPattern(const TransformationMatrix& pa
     SkBitmap* bm = m_tileImage->nativeImageForCurrentFrame();
     // If we don't have a bitmap, return a transparent shader.
     if (!bm)
-        return new SkColorShader(SkColorSetARGB(0, 0, 0, 0));
+        m_pattern = new SkColorShader(SkColorSetARGB(0, 0, 0, 0));
 
-    if (m_repeatX && m_repeatY)
-        return SkShader::CreateBitmapShader(*bm, SkShader::kRepeat_TileMode, SkShader::kRepeat_TileMode);
+    else if (m_repeatX && m_repeatY)
+        m_pattern = SkShader::CreateBitmapShader(*bm, SkShader::kRepeat_TileMode, SkShader::kRepeat_TileMode);
 
-    // Skia does not have a "draw the tile only once" option. Clamp_TileMode
-    // repeats the last line of the image after drawing one tile. To avoid
-    // filling the space with arbitrary pixels, this workaround forces the
-    // image to have a line of transparent pixels on the "repeated" edge(s),
-    // thus causing extra space to be transparent filled.
-    SkShader::TileMode tileModeX = m_repeatX ? SkShader::kRepeat_TileMode : SkShader::kClamp_TileMode;
-    SkShader::TileMode tileModeY = m_repeatY ? SkShader::kRepeat_TileMode : SkShader::kClamp_TileMode;
-    int expandW = m_repeatX ? 0 : 1;
-    int expandH = m_repeatY ? 0 : 1;
+    else {
 
-    // Create a transparent bitmap 1 pixel wider and/or taller than the
-    // original, then copy the orignal into it.
-    // FIXME: Is there a better way to pad (not scale) an image in skia?
-    SkBitmap bm2;
-    bm2.setConfig(bm->config(), bm->width() + expandW, bm->height() + expandH);
-    bm2.allocPixels();
-    bm2.eraseARGB(0x00, 0x00, 0x00, 0x00);
-    SkCanvas canvas(bm2);
-    canvas.drawBitmap(*bm, 0, 0);
-    return SkShader::CreateBitmapShader(bm2, tileModeX, tileModeY);
+        // Skia does not have a "draw the tile only once" option. Clamp_TileMode
+        // repeats the last line of the image after drawing one tile. To avoid
+        // filling the space with arbitrary pixels, this workaround forces the
+        // image to have a line of transparent pixels on the "repeated" edge(s),
+        // thus causing extra space to be transparent filled.
+        SkShader::TileMode tileModeX = m_repeatX ? SkShader::kRepeat_TileMode : SkShader::kClamp_TileMode;
+        SkShader::TileMode tileModeY = m_repeatY ? SkShader::kRepeat_TileMode : SkShader::kClamp_TileMode;
+        int expandW = m_repeatX ? 0 : 1;
+        int expandH = m_repeatY ? 0 : 1;
+
+        // Create a transparent bitmap 1 pixel wider and/or taller than the
+        // original, then copy the orignal into it.
+        // FIXME: Is there a better way to pad (not scale) an image in skia?
+        SkBitmap bm2;
+        bm2.setConfig(bm->config(), bm->width() + expandW, bm->height() + expandH);
+        bm2.allocPixels();
+        bm2.eraseARGB(0x00, 0x00, 0x00, 0x00);
+        SkCanvas canvas(bm2);
+        canvas.drawBitmap(*bm, 0, 0);
+        m_pattern = SkShader::CreateBitmapShader(bm2, tileModeX, tileModeY);
+    }
+    m_pattern->setLocalMatrix(m_patternSpaceTransformation);
+    return m_pattern;
+}
+
+void Pattern::setPlatformPatternSpaceTransform()
+{
+    if (m_pattern)
+        m_pattern->setLocalMatrix(m_patternSpaceTransformation);
 }
 
 } // namespace WebCore
